use lite-client 0.9.9, reduce plugin size by 10MB, remove outdated API.